# bidding-notice-spider

./: README.md  dockerfile  pyproject.toml  requirements.txt  s.yaml
src/: main.py
